<resources>

    <string name="app_name" translatable="false">Mapoli</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="map">Map</string>
    <string name="categories">Categories</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_message">Permissions are required in order to run this app</string>
    <string name="permissions_message_warning">You should manually allow external storage write permission in settings</string>
    <string name="google_web_client_id" translatable="false">700127274116-koda3f4ld63gjv27k0mpjj4gfnkh4v0r.apps.googleusercontent.com</string>


    <!-- Settings -->
    <string name="settings">Settings</string>

    <string name="other">Support</string>
    <string name="appearance">Appearance</string>

    <string name="about">About app</string>
    <string name="version">Version:</string>
    <string name="send">Send</string>
    <string name="report_bug_hint">Type here (max 500 characters)</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="language">Language</string>
    <string name="units"> Unit</string>
    <string name="dark_mode">Dark mode</string>
    <string name="report_bug_label">What is wrong?</string>
    <string name="report_bug_success_toast">Report sent</string>

    <string name="places">Places</string>
    <string name="icon" translatable="false">Icon</string>

    <string name="add_category">Add category</string>
    <string name="add">Add</string>
    <string name="category_name">Category name</string>
    <string name="my_account">My account</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign out</string>
    <string name="email_icon" translatable="false">Email icon</string>
    <string name="email" translatable="false">Email</string>
    <string name="display_name_icon" translatable="false">Display name icon</string>
    <string name="display_name">Display name</string>
    <string name="general_error_message">Request couldn\'t be processed, try again later</string>
    <string name="sign_out_confirmation_dialog_message">Are you sure you want to sign out?</string>
    <string name="password_icon" translatable="false">Password icon</string>
    <string name="password">Password</string>
    <string name="app_icon" translatable="false">App icon</string>
    <string name="password_confirm">Confirm password</string>
    <string name="min_six_chars_allowed">At least 6 characters</string>
    <string name="empty_not_allowed">Field cannot be empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="login_link_question">Already have an account?</string>
    <string name="register_link_question">Don\'t have an account yet?</string>
    <string name="email_in_use">User with this email already exists</string>
    <string name="signup_success">You have been successfully registered</string>
    <string name="invalid_credentials">Invalid credentials provided. Check your email and password and try again.</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="dark_mode_key" translatable="false">dark_mode</string>
    <string name="arts_and_entertainment">Arts and Entertainment</string>
    <string name="business_and_professional_services">Business and Professional Services</string>
    <string name="community_and_government">Community and Government</string>
    <string name="dining_and_drinking">Dining and Drinking</string>
    <string name="event">Event</string>
    <string name="health_and_medicine">Health and Medicine</string>
    <string name="landmarks_and_outdoors">Landmarks and Outdoors</string>
    <string name="retail">Retail</string>
    <string name="sports_and_recreation">Sports and Recreation</string>
    <string name="travel_and_transportation">Travel and Transportation</string>
    <string name="no_data_available">No data available</string>
    <string name="no_info">No information</string>
    <string name="lodz_university">Lodz University of Technology</string>
    <string name="show_current_location">Show current location</string>
    <string name="name">Name</string>
</resources>