<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            android:icon="@drawable/ic_baseline_dark_mode_24"
            app:title="@string/dark_mode" />

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            android:icon="@drawable/ic_baseline_translate_24"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="meters"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="units"
            app:title="@string/units"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <EditTextPreference
            app:key="report_a_bug"
            android:singleLine="true"
            android:icon="@drawable/ic_baseline_bug_report_24"
            app:title="@string/report_a_bug"/>

        <EditTextPreference
            app:key="about"
            android:singleLine="true"
            android:icon="@drawable/ic_baseline_info_24"
            app:title="@string/about"/>

    </PreferenceCategory>

</PreferenceScreen>