<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.trujca.mapoli.ui.map.view.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.trujca.mapoli.ui.categories.view.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.trujca.mapoli.ui.places.view.PlacesFragment"
        android:label="@string/places"
        tools:layout="@layout/fragment_places" >
        <action
            android:id="@+id/action_nav_places_to_chosen_place2"
            app:destination="@id/chosen_place" />
    </fragment>

    <activity
        android:id="@+id/nav_settings"
        android:name="com.trujca.mapoli.ui.settings.view.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings" />

    <fragment
        android:id="@+id/chosen_place"
        android:name="com.trujca.mapoli.ui.places.view.PlacesCategoryFragment"
        android:label="@string/places"
        tools:layout="@layout/fragment_places_category" />
</navigation>