<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="viewModel"
            type="com.trujca.mapoli.ui.account.viewmodel.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context=".ui.account.view.AccountFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/account_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_account"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/account_fragment_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <agency.tango.android.avatarview.views.AvatarView
            android:id="@+id/account_fragment_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:userAvatar="@{viewModel.userDetails.avatarUri}"
            android:userName="@{viewModel.userDetails.displayName}"
            app:av_border_color="@color/white"
            app:av_border_width="4dp"
            app:av_text_size_percentage="35"
            app:layout_constraintBottom_toTopOf="@+id/account_fragment_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_fragment_title" />

        <LinearLayout
            android:id="@+id/account_fragment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/signout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_fragment_avatar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_display_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/display_name"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/display_name_icon"
                app:startIconDrawable="@drawable/ic_baseline_face_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_display_name_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:text="@{viewModel.userDetails.displayName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_email_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/email"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/email_icon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_email_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:text="@{viewModel.userDetails.email}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signout_button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:onClick="@{() -> viewModel.signOutAction()}"
            android:text="@string/signout"
            android:textAllCaps="true"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_fragment_content"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading.booleanValue}"
            app:hideAnimationBehavior="outward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showAnimationBehavior="inward" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>